# ComfyUI-hybs-nodes

./: .gitignore  AGENTS.md  LICENSE  MIGRATION_PLAN_V3_NODES2.md  README.md  README_ja.md  __init__.py  hybs_comfy_api.py  hybs_resolution_common.py  pyproject.toml
config/: lora_condition.toml.example  resolution_combos.json.example
nodes/: hybs_conditional_lora_loader.py  hybs_diffusion_model_list.py  hybs_double_list.py  hybs_group_bypasser_nodes.py  hybs_int_list.py  hybs_load_image_prompt_metadata.py  hybs_load_lora.py  hybs_lora_list.py  hybs_random_resolution_selector.py  hybs_resolution_selector.py  hybs_seed_list_generator.py
web/js/: hybs_diffusion_model_list.js  hybs_double_list.js  hybs_group_bypasser_linked.js  hybs_int_list.js  hybs_load_image_prompt_metadata_advance.js  hybs_lora_list.js
workflow/: Conditional_LoRA.json  LoadImagePromptMetafata.json  sample_conditional.toml
