[project]
description = "These are custom nodes for ComfyUI."
name = "comfyui-hybs-nodes"
version = "0.0.1"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/hybskgks28275/ComfyUI-hybs-nodes"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "hybs"
DisplayName = "ComfyUI-hybs-nodes"
Icon = ""